Complete revamp of home page with BottomNavigationView

--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -235,9 +235,8 @@
   "dict_add_kanji_title": "Wort malen",
   "dict_model_not_loaded": "Modell konnte nicht geladen werden :(",
   "coach_tutorial_kanlists_1": "Hier sind die von Ihnen erstellten Vokabellisten (es handelt sich um Beispielvokabellisten). In eine neu erstellte Liste sollten Sie die Wörter aufnehmen, die Sie nach einem von Ihnen festgelegten Thema benötigen.",
-  "coach_tutorial_kanlists_2": "Wenn Sie hier klicken, können Sie die Vokabeln oder Vokabeln, die Sie lernen, in eine neue Liste aufnehmen.\n\nSie können Listen nach Lektionen eines Buches, eines Faches, eines Schwierigkeitsgrades... erstellen.\n\nWenn Sie eine Liste löschen wollen, lassen Sie sie gedrückt und es erscheint ein Dialog, um diese Aktion durchzuführen.\n\nSie können auch verschiedene Tests mit den Vokabeln Ihrer Listen absolvieren, um eine zusätzliche Herausforderung zu schaffen",
+  "coach_tutorial_kanlists_2": "Dies sind die verschiedenen Aktionen, die Sie durchführen können (von links nach rechts):\n\n- Ihre Vokabellisten ansehen.\n\n- Eine neue Liste sowohl zum Markt als auch zu Ihren eigenen Listen hinzufügen UND einen Test machen. Sie können die Listen nach Lektionen eines Buches, Thema, Schwierigkeitsgrad usw. erstellen.\n\nWenn Sie eine Liste löschen möchten, lassen Sie sie gedrückt und ein Dialog erscheint, um diese Aktion durchzuführen.\n\n-Zugang zum Markt, wo Sie Vokabellisten herunterladen können, die von anderen Benutzern erstellt und hochgeladen wurden",
   "coach_tutorial_kanlists_3": "Wenn du auf Wörter stößt, die du nicht kennst, kannst du sie im Wörterbuch nachschlagen und sie direkt zu deinen Listen hinzufügen",
-  "coach_tutorial_kanlists_4": "Hier können Sie Listen von Menschen aus der ganzen Welt suchen und herunterladen!",
   "coach_tutorial_detail_1": "Hier werden alle Vokabeln aus der Liste angezeigt. Sie können im Laufe Ihres Studiums jederzeit mehr hinzufügen.\n\nJedes Mal, wenn Sie in einem Bereich (z. B. Schreiben) üben, wird das Vokabular aktualisiert und der Prozentsatz des Erfolgs in diesem Bereich angezeigt.",
   "coach_tutorial_detail_2": "Fügen Sie weitere Vokabeln hinzu, die Sie auf der Straße, beim Lernen, Lesen, in Videospielen oder Anime sehen, indem Sie hier klicken.\n\n Sie können Wörter erstellen, indem Sie ihre Aussprache und Bedeutung hinzufügen.",
   "coach_tutorial_detail_3": "Hier sind die zusätzlichen Aktionen. Sie können den Lernmodus ändern: zufällig oder räumlich (links) oder einen Blitztest nur dieser Vokabelliste machen (rechts).\n\nDer Lernmodus bestimmt die Reihenfolge des Lernens beim Üben einer Vokabelliste:\n\nWenn er zufällig ist, wird die Reihenfolge der Wörter beim Üben zufällig sein.\n\nWenn er räumlich ist, werden die Wörter, bei denen Sie in früheren Sitzungen am schlechtesten abgeschnitten haben, zuerst erscheinen, die letzten sind die, die Sie am besten kennen.",
@@ -263,9 +262,9 @@
   "categories_test_bottom_sheet_title": "Machen Sie einen Test mit der Kategorie Ihrer Wahl",
   "categories_test_bottom_sheet_label": "Kategorie:",
   "categories_test_bottom_sheet_error": "Für diese Kategorie gibt es keine Wörter.",
-  "market_place_title": "Marktplatz",
+  "market_place_title": "Markt",
   "market_lists_searchBar_hint": "Suche nach Name",
-  "market_load_failed": "Es konnten keine Listen auf dem Marktplatz gefunden werden.",
+  "market_load_failed": "Es konnten keine Listen auf dem Markt gefunden werden.",
   "market_empty": "Keine Listen verfügbar.",
   "market_downloads_button_label": "Herunterladen",
   "market_filter_rating": "Bewertung",
@@ -275,7 +274,7 @@
   "market_downloaded_successfully": "Sie haben die Liste erfolgreich auf Ihr Gerät heruntergeladen",
   "add_to_market_select_list": "Wählen Sie eine Ihrer Listen aus",
   "add_to_market_title": "Eine Liste hochladen",
-  "add_to_market_needs_registration": "Um eine Liste auf dem Marktplatz zu erstellen, müssen Sie bei KanPractice registriert sein.",
+  "add_to_market_needs_registration": "Um eine Liste auf dem Markt zu erstellen, müssen Sie bei KanPractice registriert sein.",
   "add_to_market_description_label": "Beschreibung",
   "add_to_market_description_hint": "Beschreibt die Liste für andere Nutzer",
   "add_to_market_successfully_created": "Die Liste wurde erfolgreich hochgeladen.",
@@ -294,5 +293,11 @@
   "market_remove_sure_label": "Die Liste wird vom Marktplatz entfernt und niemand wird sie mehr herunterladen können. Möchten Sie fortfahren?",
   "market_removed_successfully": "Die Liste wurde erfolgreich entfernt.",
   "market_filter_mine": "Meine Listen",
-  "market_need_to_be_author": "Um die Liste zu löschen, müssen Sie der Autor der Liste sein."
+  "market_need_to_be_author": "Um die Liste zu löschen, müssen Sie der Autor der Liste sein.",
+  "bottom_nav_kanlists": "KanListen",
+  "bottom_nav_actions": "Aktionen",
+  "bottom_nav_market": "Markt",
+  "bottom_actions_create_test": "Einen neuen Test durchführen",
+  "bottom_actions_create_kanlist": "Eine neue Liste erstellen",
+  "bottom_actions_upload_list": "Eine neue Liste hochladen"
 }
