--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -235,9 +235,8 @@
   "dict_add_kanji_title": "Draw word",
   "dict_model_not_loaded": "Could not load model :(",
   "coach_tutorial_kanlists_1": "Here are the vocabulary lists created by you (these are sample vocabulary lists). In a newly created list, you should include the words you want according to a theme defined by you.",
-  "coach_tutorial_kanlists_2": "By clicking here you can include in a new list the vocabulary or words you learn in a categorized way.\n\nYou can create lists by lessons of a book, subject, difficulty...\n\nIf you want to delete a list, leave it pressed and a dialog will appear to perform this action.\n\nIn addition, you can take different tests with the vocabulary of your lists for an extra challenge.",
+  "coach_tutorial_kanlists_2": "These are the different actions you can perform (from left to right):\n\n- View your vocabulary lists.\n\n- Add a new list to the market as well as to your own lists. You can create lists by lessons of a book, subject, difficulty...\n\nIf you want to delete a list, leave it pressed and a dialog will appear to perform this action.\n\n-Access to the market, where you can download vocabulary lists created and uploaded by other users",
   "coach_tutorial_kanlists_3": "When you find words you don't know, you can look them up in the dictionary and add them directly to your lists.",
-  "coach_tutorial_kanlists_4": "In here you can search and download lists from people all over the world!",
   "coach_tutorial_detail_1": "All the vocabulary in the list is displayed here. You can add more at any time as your study progresses.\n\nEach time you practise in an area (e.g. writing), the vocabulary will be updated showing the percentage of success in that area.",
   "coach_tutorial_detail_2": "Add more vocabulary you see on the street, studying, reading, video games or anime by clicking here.\n\nYou can create words by adding their pronunciation and meaning.",
   "coach_tutorial_detail_3": "Here are the supplementary actions. You can change the learning mode: random or spatial (left) or do a Blitz test of this vocabulary list only (right).\n\nThe learning mode determines the order of study when practising a vocabulary list:\n\nIf it is random, the order of the words when practising will be random.\n\nIf it is spatial, the words that you have been worst at in previous sessions will appear first, the last ones being the ones you know best.",
@@ -263,9 +262,9 @@
   "categories_test_bottom_sheet_title": "Take a test with the category of your choice",
   "categories_test_bottom_sheet_label": "Category:",
   "categories_test_bottom_sheet_error": "There are no words with this category.",
-  "market_place_title": "Marketplace",
+  "market_place_title": "Market",
   "market_lists_searchBar_hint": "Search by name",
-  "market_load_failed": "No lists could be found in the marketplace.",
+  "market_load_failed": "No lists could be found in the market.",
   "market_empty": "No lists available.",
   "market_downloads_button_label": "Download",
   "market_filter_rating": "Rating",
@@ -275,7 +274,7 @@
   "market_downloaded_successfully": "Successfully downloaded the list onto your device",
   "add_to_market_select_list": "Select one of your lists",
   "add_to_market_title": "Upload a list",
-  "add_to_market_needs_registration": "To create a list in the marketplace you need to be registered on KanPractice.",
+  "add_to_market_needs_registration": "To create a list in the market you need to be registered on KanPractice.",
   "add_to_market_description_label": "Description",
   "add_to_market_description_hint": "Describes the listing for other users.",
   "add_to_market_successfully_created": "The list was successfully uploaded.",
@@ -294,5 +293,11 @@
   "market_remove_sure_label": "The list will be removed from the marketplace and nobody will be able to download it. Do you want to continue?",
   "market_removed_successfully": "The list was successfully removed.",
   "market_filter_mine": "My Lists",
-  "market_need_to_be_author": "To delete the list you must be the author of the list."
+  "market_need_to_be_author": "To delete the list you must be the author of the list.",
+  "bottom_nav_kanlists": "KanLists",
+  "bottom_nav_actions": "Actions",
+  "bottom_nav_market": "Market",
+  "bottom_actions_create_test": "Perform a new test",
+  "bottom_actions_create_kanlist": "Create a new list",
+  "bottom_actions_upload_list": "Upload a new list"
 }
