--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -235,9 +235,8 @@
   "dict_add_kanji_title": "Dibujar palabra",
   "dict_model_not_loaded": "No se ha podido cargar el modelo :(",
   "coach_tutorial_kanlists_1": "Aquí se muestran las listas de vocabulario creadas por ti (estas son listas de vocabulario de muestra). En una lista recién creada, deberás incluir las palabras que quieras acorde a una temática definida por ti.",
-  "coach_tutorial_kanlists_2": "Pulsando aquí puedes incluir en una nueva lista el vocabulario o palabras que vayas aprendiendo de manera categorizada.\n\nPuedes crear las listas por lecciones de un libro, temática, dificultad...\n\nSi quieres eliminar una lista, dejala pulsada y aparecerá un diálogo para realizar dicha acción.\n\nAdemás, podrás realizar distintos tests con el vocabulario de tus listas para un desafío extra.",
+  "coach_tutorial_kanlists_2": "Estas son las diferentes acciones que puedes realizar (de izquierda a derecha):\n\n- Visualizar tus listas de vocabulario.\n\n- Añadir una nueva lista tanto al mercado como a tus propias listas Y realizar un test. Puedes crear las listas por lecciones de un libro, temática, dificultad...\n\nSi quieres eliminar una lista, dejala pulsada y aparecerá un diálogo para realizar dicha acción.\n\n-Acceso al mercado, donde podrás descargar listas de vocabulario que han creado y subido otros usuarios.",
   "coach_tutorial_kanlists_3": "Cuando encuentres palabras que no conozcas, podrás buscarlas mediante el diccionario y añadirlas directamente a tus listas.",
-  "coach_tutorial_kanlists_4": "Aquí podrás buscar y descargar listas de vocabulario de personas de todo el mundo.",
   "coach_tutorial_detail_1": "Aquí se muestra todo el vocabulario de la lista. Podrás añadir más en cualquier momento a medida que tu estudio avance.\n\nCada vez que practiques en una área (escritura por ejemplo), el vocabulario se actualizará mostrando el porcentaje de acierto de la misma.",
   "coach_tutorial_detail_2": "Añade más vocabulario que veas por la calle, estudiando, leyendo, en videojuegos o anime pulsando aquí.\n\nPodrás crear palabras añadiendo su pronunciación y su significado.",
   "coach_tutorial_detail_3": "Aquí están las acciones suplementarias. Podrás cambiar de modo de aprendizaje: aleatorio o espacial (izquierda) o realizar un test Blitz solamente de esta lista de vocabulario (derecha).\n\nEl modo de aprendizaje determina el orden de estudio al practicar una lista de vocabulario:\n\nSi es aleatorio, el orden de las palabras al practicar será aleatorio.\n\nSi es espacial, las palabras que peor se te han dado en anteriores sesiones aparecerán las primeras, siendo las últimas las que mejor te sabes.",
@@ -263,14 +262,14 @@
   "categories_test_bottom_sheet_title": "Haz un test con la categoría de tu elección",
   "categories_test_bottom_sheet_label": "Categoría:",
   "categories_test_bottom_sheet_error": "No hay palabras con esta categoría.",
-  "market_place_title": "Marketplace",
+  "market_place_title": "Mercado",
   "market_lists_searchBar_hint": "Busca por nombre",
-  "market_load_failed": "No se han podido encontrar listas en el marketplace.",
+  "market_load_failed": "No se han podido encontrar listas en el mercado.",
   "market_empty": "No hay listas disponibles.",
-  "market_downloads_button_label": "Download",
-  "market_filter_rating": "Rating",
-  "market_filter_downloads": "Downloads",
-  "market_filter_words": "Words",
+  "market_downloads_button_label": "Descargar",
+  "market_filter_rating": "Calificación",
+  "market_filter_downloads": "Descargas",
+  "market_filter_words": "Palabras",
   "market_need_auth": "Necesitas estar registrado en KanPractice. Ve a Ajustes > Cuenta, e inicia sesión.",
   "market_downloaded_successfully": "Se ha descargado correctamente la lista en tu dispositivo",
   "add_to_market_select_list": "Selecciona una de tus listas",
@@ -279,7 +278,7 @@
   "add_to_market_description_label": "Descripción",
   "add_to_market_description_hint": "Describe la lista para los demás usuarios",
   "add_to_market_successfully_created": "La lista se ha subido correctamente.",
-  "add_to_market_go_back_to_market_button_label": "Ir al marketplace",
+  "add_to_market_go_back_to_market_button_label": "Ir al mercado",
   "add_to_market_validation_failed": "Rellena correctamente los campos",
   "add_to_market_kanji_empty": "La lista que has seleccionado no tiene palabras",
   "add_to_market_authentication_failed": "La autenticación de usuario ha fallado. Inténtalo de nuevo.",
@@ -294,5 +293,11 @@
   "market_remove_sure_label": "La lista se eliminará del marketplace y nadie podrá descargársela. ¿Quieres continuar?",
   "market_removed_successfully": "La lista se ha eliminado correctamente",
   "market_filter_mine": "Mis Listas",
-  "market_need_to_be_author": "Para eliminar la lista debes ser el autor de la misma"
+  "market_need_to_be_author": "Para eliminar la lista debes ser el autor de la misma",
+  "bottom_nav_kanlists": "KanLists",
+  "bottom_nav_actions": "Acciones",
+  "bottom_nav_market": "Mercado",
+  "bottom_actions_create_test": "Realizar un nuevo test",
+  "bottom_actions_create_kanlist": "Crear una nueva lista",
+  "bottom_actions_upload_list": "Subir una nueva lista"
 }
