Fixes on tutorials

--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -180,8 +180,9 @@
   "load_failed_try_again_button_label": "Try again",
   "tutorial_done": "Start!",
   "tutorial_skip": "Skip Tutorial",
-  "tutorial_kanlist": "Welcome to KanPractice!\n\nIn this app you can create your own vocabulary lists and see your progress in detail as you improve your Japanese through practice and tests. Furthermore, you will be able to search kanji and new words that you do not know with the Dictionary function.",
+  "tutorial_kanlist": "Welcome to KanPractice!\n\nIn this app you can create your own vocabulary lists and see your progress in detail as you improve your Japanese through practice and tests.",
   "tutorial_dictionary": "In the Dictionary, using Artificial Intelligence algorithms, you will be able to draw kanji you don't know and form words with them to look them up in Jisho.org.",
+  "tutorial_market": "This is the market, where you can download lists from other users and upload your lists for others to download. For this you must be registered in KanPractice.",
   "tutorial_lists": "This is the detail view of a list. Here you will see all the words included in the list with colors, denoting their individual grade. You will be able to practice or take writing, reading, recognition or listening tests.",
   "tutorial_details": "By clicking on a word you will be able to see the word itself with all its data: reading (with option to listen to it with TTS), option to see extra data of the word with Jisho.org, meaning, statistics in reference to learning types and creation date.",
   "tutorial_jisho": "Together with Jisho.org, different data of the kanji or word is extracted to facilitate the learning of the word with examples in sentences, on'yomi, kun'yomi and stroke video.\n\nFrom the Dictionary, when searching for new words, this page will show up and you will be able to add the searched word to your study lists directly",
