--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -180,8 +180,9 @@
   "load_failed_try_again_button_label": "Erneut versuchen",
   "tutorial_done": "Start!",
   "tutorial_skip": "Tutorial überspringen",
-  "tutorial_kanlist": "Willkommen bei KanPractice!\n\nIn dieser App können Sie Ihre eigenen Vokabellisten erstellen und Ihre Fortschritte im Detail sehen, während Sie Ihr Japanisch durch Übungen und Tests verbessern. Außerdem können Sie mit der Wörterbuchfunktion nach Kanji und neuen Wörtern suchen, die Sie noch nicht kennen.",
+  "tutorial_kanlist": "Willkommen bei KanPractice!\n\nIn dieser App können Sie Ihre eigenen Vokabellisten erstellen und Ihre Fortschritte im Detail sehen, während Sie Ihr Japanisch durch Übungen und Tests verbessern.",
   "tutorial_dictionary": "Im Wörterbuch können Sie mithilfe von Algorithmen der künstlichen Intelligenz Kanji zeichnen, die Sie nicht kennen, und mit ihnen Wörter bilden, um sie in Jisho.org nachzuschlagen.",
+  "tutorial_market": "Dies ist der Markt, auf dem Sie Listen von anderen Nutzern herunterladen und Ihre eigenen Listen hochladen können, damit andere sie herunterladen können. Dazu müssen Sie bei KanPractice registriert sein.",
   "tutorial_lists": "Dies ist die Detailansicht einer Liste. Hier sehen Sie alle in der Liste enthaltenen Wörter in Farbe, was ihre individuelle Punktzahl angibt. Man kann üben oder Schreib-, Lese-, Merk- oder Hörtests machen.",
   "tutorial_details": "Wenn Sie auf ein Wort klicken, können Sie das Wort selbst mit all seinen Daten sehen: Lesung (mit der Option, es mit Text to Speech anzuhören), Option, um zusätzliche Daten des Wortes bei Jisho.org zu sehen, Bedeutung, Statistiken in Bezug auf die Lerntypen und das Erstellungsdatum",
   "tutorial_jisho": "Zusammen mit Jisho.org werden verschiedene Daten des Kanji oder des Wortes extrahiert, um das Lernen des Wortes mit Beispielen in Sätzen, on'yomi, kun'yomi und Stroke Video zu erleichtern.\n\nWenn Sie im Wörterbuch nach neuen Wörtern suchen, wird diese Seite angezeigt und Sie können das gesuchte Wort direkt zu Ihren Lernlisten hinzufügen.",
