--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -180,8 +180,9 @@
   "load_failed_try_again_button_label": "Inténtalo de nuevo",
   "tutorial_done": "¡Empezar!",
   "tutorial_skip": "Saltar Tutorial",
-  "tutorial_kanlist": "¡Bienvenido a KanPractice!\n\nEn esta app podrás crear tus propias listas de vocabulario y ver tu progreso detalladamente mientras mejoras tu japonés a base de práctica y tests. Además, podrás buscar kanji y palabras nuevas que desconozcas con la función de Diccionario.",
+  "tutorial_kanlist": "¡Bienvenido a KanPractice!\n\nEn esta app podrás crear tus propias listas de vocabulario y ver tu progreso detalladamente mientras mejoras tu japonés a base de práctica y tests.",
   "tutorial_dictionary": "En el Diccionario, haciendo uso de algoritmos de Inteligencia Artificial, podrás dibujar kanji que desconozcas y formar palabras con ellos para buscarlos en Jisho.org.",
+  "tutorial_market": "Este es el mercado, donde podrás descargar listas de otros usuarios y subir tus listas para que otros se las descarguen. Para esto debes estar registrado en KanPractice.",
   "tutorial_lists": "Esta es la vista detalle de una lista. Aquí verás todas las palabras incluidas en la lista con colores, denotando su nota individual. Podrás practicar o hacer tests de escritura, lectura, reconocimiento o escucha.",
   "tutorial_details": "Al pulsar en una palabra se podrá ver la propia palabra con todos sus datos: lectura (con opción a escucharla con TTS), opción para ver datos extra de la palabra con Jisho.org, significado, estadísticas en referencia a los tipos de aprendizaje y fecha de creación.",
   "tutorial_jisho": "Junto con Jisho.org, se extraen distintos datos del kanji o palabra para facilitar el aprendizaje del mismo con ejemplos en frases, on'yomi, kun'yomi y vídeo del trazado.\n\nDesde el Diccionario, al buscar palabras nuevas, se mostrará esta página y podrás añadir la palabra a tus listas de estudio directamente.",
