Change name upon upload list

--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -301,5 +301,7 @@
   "bottom_actions_create_test": "Einen neuen Test durchführen",
   "bottom_actions_create_kanlist": "Eine neue Liste erstellen",
   "bottom_actions_upload_list": "Eine neue Liste hochladen",
-  "market_rating_not_found": "Die Liste, die Sie gerade bewertet haben, wurde nicht gefunden."
+  "market_rating_not_found": "Die Liste, die Sie gerade bewertet haben, wurde nicht gefunden.",
+  "add_to_market_list_name_label": "Listenname",
+  "add_to_market_list_name_hint": "Name"
 }
