--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -301,5 +301,7 @@
   "bottom_actions_create_test": "Perform a new test",
   "bottom_actions_create_kanlist": "Create a new list",
   "bottom_actions_upload_list": "Upload a new list",
-  "market_rating_not_found": "The list you just rated was not found."
+  "market_rating_not_found": "The list you just rated was not found.",
+  "add_to_market_list_name_label": "List Name",
+  "add_to_market_list_name_hint": "Name"
 }
