--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -301,5 +301,7 @@
   "bottom_actions_create_test": "Realizar un nuevo test",
   "bottom_actions_create_kanlist": "Crear una nueva lista",
   "bottom_actions_upload_list": "Subir una nueva lista",
-  "market_rating_not_found": "La lista que has calificado no se ha podido encontrar."
+  "market_rating_not_found": "La lista que has calificado no se ha podido encontrar.",
+  "add_to_market_list_name_label": "Nombre de la Lista",
+  "add_to_market_list_name_hint": "Nombre"
 }
