--- a/lib/core/localization/de.json
+++ b/lib/core/localization/de.json
@@ -157,6 +157,8 @@
   "settings_information_license_label": "Lizenz",
   "settings_information_terms_label": "Rechtliches",
   "settings_information_about_label": "Copyright",
+  "settings_number_of_kanji_in_test": "Anzahl der Wörter in Tests",
+  "change_kanji_in_test_selection": "Wählen Sie einen Wert",
   "test_history_showRemoveTestsDialog_title": "Alle Tests entfernen ",
   "test_history_showRemoveTestsDialog_content": "Alle auf diesem Gerät gespeicherten Tests werden entfernt. Diese Aktion kann nicht rückgängig gemacht werden. Wollen Sie fortfahren? ",
   "test_history_showRemoveTestsDialog_positive": "Entfernen",
