--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -157,6 +157,8 @@
   "settings_information_license_label": "Licenses",
   "settings_information_terms_label": "Legal",
   "settings_information_about_label": "Copyright",
+  "settings_number_of_kanji_in_test": "Number of Words in Tests",
+  "change_kanji_in_test_selection": "Select a Value",
   "test_history_showRemoveTestsDialog_title": "Removing All Tests",
   "test_history_showRemoveTestsDialog_content": "All tests saved on this device will be removed. This action cannot be undone. Do you want to proceed?",
   "test_history_showRemoveTestsDialog_positive": "Remove",
