--- a/lib/core/localization/es.json
+++ b/lib/core/localization/es.json
@@ -158,6 +158,10 @@
   "settings_information_terms_label": "Legal",
   "settings_information_about_label": "Copyright",
   "settings_number_of_kanji_in_test": "Número de Palabras en los Tests",
+  "settings_toggle_theme": "Cambiar Tema",
+  "settings_theme_system": "Sistema",
+  "settings_theme_light": "Claro",
+  "settings_theme_dark": "Oscuro",
   "change_kanji_in_test_selection": "Selecciona un Valor",
   "test_history_showRemoveTestsDialog_title": "Eliminar todas los tests",
   "test_history_showRemoveTestsDialog_content": "Se eliminarán todas las pruebas guardadas en este dispositivo. Esta acción no se puede deshacer. ¿Quieres continuar?",
