--- a/lib/core/localization/en.json
+++ b/lib/core/localization/en.json
@@ -323,5 +323,8 @@
   "add_folder_name_hint": "Manga Related",
   "add_folder_lists_selection": "Choose which lists you want to add to this folder",
   "add_folder_insertion_error": "Something happened while creating the folder. Try again later.",
-  "add_folder_name_error": "The folder name must not be empty."
+  "add_folder_name_error": "The folder name must not be empty.",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_title": "Remove a KanList from this folder",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_content": "Are you sure you want to remove this list from this folder?",
+  "kan_list_tile_createDialogForDeletingKanListWithinFolder_positive": "Remove"
 }
